Name:                bling
Version:             0.1
Description:         A Raytracer
Author:              Matthias Treydte
Maintainer:          waldheinz@gmail.com
License:             GPL
Build-Type:          Simple
Cabal-Version:       >=1.8

Flag Gui
   Description:      Enable building the SDL based GUI
   Default:          False
   
Flag Devel
   Description:      Enable building some development tools
   Default:          False
   
Library
   Hs-Source-Dirs:   src
   Build-Depends:
      base              >= 4.3,
      bytestring        >= 0.9,
      deepseq           >= 1.1,
      filepath          >= 1.2,
      mtl               >= 2.0,
      mwc-random        >= 0.10,
      parsec            >= 3.1,
      parallel          >= 3.1,
      pretty            >= 1.0,
      primitive         >= 0.4,
      random            >= 1.0,
      random-shuffle    >= 0.0,
      SDL               >= 0.6,
      transformers      >= 0.2,
      vector            >= 0.9,
      vector-algorithms >= 0.5
      
   Ghc-Options:
      -Wall -O2 -fexcess-precision

   Ghc-Prof-Options:
      -O2 -fexcess-precision -prof

   Exposed-Modules:
      Graphics.Bling.AABB,
      Graphics.Bling.Camera,
      Graphics.Bling.DifferentialGeometry,
      Graphics.Bling.Edsl,
      Graphics.Bling.Gui,
      Graphics.Bling.Image,
      Graphics.Bling.Integrator,
      Graphics.Bling.Light,
      Graphics.Bling.Math,
      Graphics.Bling.Montecarlo,
      Graphics.Bling.Primitive,
      Graphics.Bling.Random,
      Graphics.Bling.Reflection,
      Graphics.Bling.Rendering,
      Graphics.Bling.Sampling,
      Graphics.Bling.Scene,
      Graphics.Bling.Shape,
      Graphics.Bling.Spectrum,
      Graphics.Bling.SunSky,
      Graphics.Bling.Texture,
      Graphics.Bling.Transform,
      Graphics.Bling.Types,
      Graphics.Bling.Integrator.BidirPath,
      Graphics.Bling.Integrator.Debug,
      Graphics.Bling.Integrator.DirectLighting,
      Graphics.Bling.Integrator.LightTracer,
      Graphics.Bling.Integrator.Metropolis,
      Graphics.Bling.Integrator.Path,
      Graphics.Bling.IO.CameraParser,
      Graphics.Bling.IO.IntegratorParser,
      Graphics.Bling.IO.LightParser,
      Graphics.Bling.IO.MaterialParser,
      Graphics.Bling.IO.ParserCore,
      Graphics.Bling.IO.PrimitiveParser,
      Graphics.Bling.IO.Progress,
      Graphics.Bling.IO.RenderJob,
      Graphics.Bling.IO.RendererParser,
      Graphics.Bling.IO.RGBE,
      Graphics.Bling.IO.TransformParser,
      Graphics.Bling.IO.WaveFront,
      Graphics.Bling.Material.Lafortune,
      Graphics.Bling.Material.Matte,
      Graphics.Bling.Material.Metal,
      Graphics.Bling.Material.Plastic,
      Graphics.Bling.Material.Specular,
      Graphics.Bling.Material.Substrate,
      Graphics.Bling.Material.Wood,
      Graphics.Bling.Primitive.Bezier,
      Graphics.Bling.Primitive.Bvh,
      Graphics.Bling.Primitive.Fractal,
      Graphics.Bling.Primitive.Geometry,
      Graphics.Bling.Primitive.KdTree,
      Graphics.Bling.Primitive.TriangleMesh,
      Graphics.Bling.Renderer.SPPM
      
Executable bling
   hs-source-dirs:   src/Graphics/Bling/Main
   Main-is:          Main.hs
   Build-Depends:    bling, base, pretty, random, mwc-random
   ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64 -rtsopts -threaded
   ghc-prof-options: -O2 -fexcess-precision -prof -rtsopts

Executable bling-gui
   if flag(Gui)
      Buildable:     True
      Build-Depends: bling, base, pretty, random, mwc-random, SDL
   else
      Buildable:     False
      
   hs-source-dirs:   src/Graphics/Bling/Main
   Main-is:          GuiMain.hs
   
   ghc-options:      -Wall -fexcess-precision -fspec-constr-count=64 -rtsopts -threaded
   ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts

