Name:                bling
Version:             0.1
Description:         A Raytracer
Author:              Matthias Treydte
Maintainer:          waldheinz@gmail.com
License:             GPL
Build-Type:          Simple
Cabal-Version:       >=1.8

Flag gui
   Description:      enable building the SDL based GUI
   Default:          False
   
Library
   Hs-Source-Dirs:   src/lib
   Build-Depends:
      base              >= 4.3,
      bytestring        >= 0.9,
      bytestring-lexing >= 0.4,
      containers        >= 0.4,
      deepseq           >= 1.1,
      filepath          >= 1.2,
      JuicyPixels       >= 2.0,
      mtl               >= 2.0,
      mwc-random        >= 0.10,
      parsec            >= 3.1,
      parallel          >= 3.1,
      pretty            >= 1.0,
      primitive         >= 0.4,
      transformers      >= 0.2,
      vector            >= 0.9,
      vector-algorithms >= 0.5
      
   Ghc-Options:
      -Wall
      -O2
      -fexcess-precision
      
   Exposed-Modules:
      Graphics.Bling.AABB,
      Graphics.Bling.Camera,
      Graphics.Bling.DifferentialGeometry,
      Graphics.Bling.Filter,
      Graphics.Bling.Fresnel,
      Graphics.Bling.Image,
      Graphics.Bling.Integrator,
      Graphics.Bling.Light,
      Graphics.Bling.Math,
      Graphics.Bling.Montecarlo,
      Graphics.Bling.Primitive,
      Graphics.Bling.Random,
      Graphics.Bling.Rendering,
      Graphics.Bling.Sampling,
      Graphics.Bling.Scene,
      Graphics.Bling.Shape,
      Graphics.Bling.Spectrum,
      Graphics.Bling.SunSky,
      Graphics.Bling.Texture,
      Graphics.Bling.Transform,
      Graphics.Bling.Types,
      Graphics.Bling.Integrator.BidirPath,
      Graphics.Bling.Integrator.Debug,
      Graphics.Bling.Integrator.DirectLighting,
      Graphics.Bling.Integrator.Path,
      Graphics.Bling.IO.Bitmap,
      Graphics.Bling.IO.CameraParser,
      Graphics.Bling.IO.IntegratorParser,
      Graphics.Bling.IO.LightParser,
      Graphics.Bling.IO.MaterialParser,
      Graphics.Bling.IO.ParserCore,
      Graphics.Bling.IO.PrimitiveParser,
      Graphics.Bling.IO.Progress,
      Graphics.Bling.IO.RenderJob,
      Graphics.Bling.IO.RendererParser,
      Graphics.Bling.IO.TransformParser,
      Graphics.Bling.IO.WaveFront,
      Graphics.Bling.Material,
      Graphics.Bling.Primitive.Bezier,
      Graphics.Bling.Primitive.Fractal,
      Graphics.Bling.Primitive.Geometry,
      Graphics.Bling.Primitive.Heightmap,
      Graphics.Bling.Primitive.KdTree,
      Graphics.Bling.Primitive.TriangleMesh,
      Graphics.Bling.Reflection,
      Graphics.Bling.Reflection.Diffuse,
      Graphics.Bling.Reflection.Microfacet,
      Graphics.Bling.Reflection.Specular,
      Graphics.Bling.Renderer.LightTracer,
      Graphics.Bling.Renderer.Metropolis,
      Graphics.Bling.Renderer.SPPM,
      Graphics.Bling.Utils
      
Executable bling
   hs-source-dirs:   src/cmdline
   Main-is:          Main.hs
   build-Depends:    bling, base, pretty, random, mwc-random
   ghc-options:
      -Wall
      -O2
      -threaded
      -with-rtsopts=-N
   
Executable bling-gui
   if flag(gui)
      Buildable:     True
      build-Depends: bling, base, pretty, random, mwc-random, SDL
   else
      Buildable:     False
      
   hs-source-dirs:   src/gui
   main-is:          Main.hs

   ghc-options:
     -Wall
     -O2
     -threaded
     -with-rtsopts=-N

