Name:                rt
Version:             0.1
Description:         A raytracer
Author:              Matthias Treydte
Maintainer:          waldheinz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable rt
   Main-is:           Main.hs
   Build-Depends:     base >= 3 && < 5, random, haskell98
   ghc-options: -Wall -O2
