Name:                rt
Version:             0.1
Description:         A raytracer
Author:              Matthias Treydte
Maintainer:          waldheinz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable rt
   Main-is:           Main.hs
   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random
   ghc-options: -Wall -O2

Executable rt.debug
   Main-is:           Main.hs
   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random
   ghc-options: -Wall -O2 -prof -auto-all -caf-all
